@@ -1,3 +1,7 @@
+2007-06-02  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am: don't try to distribute removed files...
+
 2007-05-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* TODO.xml:
